[gd_scene load_steps=9 format=3 uid="uid://bafs8xqs4kblk"]

[ext_resource type="Script" path="res://scripts/SplitScreen.gd" id="1_r087b"]
[ext_resource type="PackedScene" uid="uid://c6fh6obbmkxob" path="res://scenes/level/level_3.tscn" id="2_a3s06"]
[ext_resource type="PackedScene" uid="uid://bw4vh7j8g3fm7" path="res://scenes/Skill/more_bullet.tscn" id="3_7e8l8"]
[ext_resource type="PackedScene" uid="uid://c4pivsee1h5rl" path="res://scenes/Skill/heal.tscn" id="4_kuwpt"]
[ext_resource type="PackedScene" uid="uid://dls488dai5v42" path="res://scenes/Skill/sword.tscn" id="5_cbscq"]
[ext_resource type="PackedScene" uid="uid://ekcl454jyl6p" path="res://scenes/Skill/collector_up.tscn" id="6_3yo4v"]
[ext_resource type="PackedScene" uid="uid://h7e751usjlnc" path="res://scenes/Skill/defense_up.tscn" id="7_jjixk"]

[sub_resource type="GDScript" id="GDScript_acf85"]
script/source = "extends CanvasLayer


@onready var player_1 = get_tree().get_first_node_in_group(\"player1\")
@onready var health_1 = player_1.get_node(\"Health\")
@export var health_bar_1 : ProgressBar
@export var label_1 : Label

@onready var player_2 = get_tree().get_first_node_in_group(\"player2\")
@onready var health_2 = player_2.get_node(\"Health\")
@export var health_bar_2 : ProgressBar
@export var label_2 : Label

@onready var game_manager = get_tree().get_first_node_in_group(\"game_manager\")
@export var base_label : Label
@export var gold_label : Label
@export var win_label : Label
@export var wave_label : Label
@export var level_label : Label

func _ready():
	health_1.healthchanged.connect(_health_update)
	health_2.healthchanged.connect(_health_update)
	game_manager.base.connect(_base_update)
	game_manager.gold_change.connect(_gold_update)
	game_manager.win.connect(_on_win)
	game_manager.wave_comming.connect(_on_slime_wave)
	_health_update()
	_base_update()
	_gold_update()
	level_label.text = \"level:\" + str(get_tree().current_scene.scene_file_path.to_int())

func _health_update():
	if is_instance_valid(health_1):
		health_bar_1.value = health_1.health * 100 / health_1.max_health 
		label_1.text = str(health_1.health) +\"/\"+ str(health_1.max_health)
	
	if is_instance_valid(health_2):
		health_bar_2.value = health_2.health * 100 / health_2.max_health 
		label_2.text = str(health_2.health) +\"/\"+ str(health_2.max_health)


func _base_update():
	base_label.text = \"base health:\" + str(game_manager.base_health) +\"/\"+ str(game_manager.base_max_health)

func _gold_update():
	gold_label.text = \"gold:\" + str(game_manager.gold)

func _on_win():
	win_label.show()

func _on_slime_wave():
	wave_label.show()
	await get_tree().create_timer(5).timeout
	wave_label.hide()
"

[node name="Main_1" type="Node"]

[node name="SplitScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r087b")

[node name="GridContainer" type="GridContainer" parent="SplitScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="SplitScreen/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Player1Viewport" type="SubViewport" parent="SplitScreen/GridContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="Level3" parent="SplitScreen/GridContainer/SubViewportContainer/Player1Viewport" instance=ExtResource("2_a3s06")]

[node name="Camera2D" type="Camera2D" parent="SplitScreen/GridContainer/SubViewportContainer/Player1Viewport"]

[node name="SubViewportContainer2" type="SubViewportContainer" parent="SplitScreen/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Player2Viewport" type="SubViewport" parent="SplitScreen/GridContainer/SubViewportContainer2"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="SplitScreen/GridContainer/SubViewportContainer2/Player2Viewport"]
position = Vector2(578, 0)

[node name="UI" type="CanvasLayer" parent="." node_paths=PackedStringArray("health_bar_1", "label_1", "health_bar_2", "label_2", "base_label", "gold_label", "win_label", "wave_label", "level_label")]
script = SubResource("GDScript_acf85")
health_bar_1 = NodePath("Player 1 ui/HealthUI/HealthBarUI")
label_1 = NodePath("Player 1 ui/HealthUI/HealthShow")
health_bar_2 = NodePath("Player 2 ui/HealthUI/HealthBarUI")
label_2 = NodePath("Player 2 ui/HealthUI/HealthShow")
base_label = NodePath("Base")
gold_label = NodePath("Gold")
win_label = NodePath("Win")
wave_label = NodePath("WaveComming")
level_label = NodePath("Level")

[node name="Base" type="Label" parent="UI"]
offset_left = 379.0
offset_top = 10.0
offset_right = 486.0
offset_bottom = 62.0
text = "base health:"

[node name="Gold" type="Label" parent="UI"]
offset_left = 699.0
offset_top = 12.0
offset_right = 735.0
offset_bottom = 38.0
text = "Gold"

[node name="Level" type="Label" parent="UI"]
offset_left = 546.0
offset_top = 10.0
offset_right = 623.0
offset_bottom = 46.0
text = "level"

[node name="WaveComming" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -54.0
offset_right = 34.5
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
text = "slime wave!"

[node name="Win" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -70.0
offset_right = 36.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
text = "winÔºÅ"

[node name="Player 1 ui" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = -12.0
offset_top = -12.0
offset_right = 28.0
offset_bottom = 28.0

[node name="HealthUI" type="Control" parent="UI/Player 1 ui"]
self_modulate = Color(0.27451, 0.992157, 0.0313726, 1)
layout_mode = 3
anchors_preset = 0
offset_left = -5.0
offset_top = -4.0
offset_right = 40.0
offset_bottom = 16.0

[node name="HealthShow" type="Label" parent="UI/Player 1 ui/HealthUI"]
layout_mode = 0
offset_left = 118.0
offset_top = 21.0
offset_right = 162.0
offset_bottom = 47.0
text = "P1  HP:"

[node name="HealthBarUI" type="ProgressBar" parent="UI/Player 1 ui/HealthUI"]
self_modulate = Color(0.0156863, 0.972549, 0.0196078, 1)
layout_mode = 0
offset_left = 19.0
offset_top = 18.0
offset_right = 292.0
offset_bottom = 49.0
value = 100.0
show_percentage = false

[node name="Skills" type="HBoxContainer" parent="UI/Player 1 ui"]
layout_mode = 0
offset_left = 16.0
offset_top = 52.0
offset_right = 66.0
offset_bottom = 245.0
scale = Vector2(0.5, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Player 1 ui/Skills"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Player 1 ui/Skills/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "1
"

[node name="VBoxContainer" parent="UI/Player 1 ui/Skills/VBoxContainer" instance=ExtResource("3_7e8l8")]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Player 1 ui/Skills"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Player 1 ui/Skills/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "2
"

[node name="VBoxContainer" parent="UI/Player 1 ui/Skills/VBoxContainer2" instance=ExtResource("4_kuwpt")]
layout_mode = 2

[node name="Player 2 ui" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = -744.0
offset_top = -8.0
offset_right = -704.0
offset_bottom = 32.0

[node name="HealthUI" type="Control" parent="UI/Player 2 ui"]
self_modulate = Color(0.27451, 0.992157, 0.0313726, 1)
layout_mode = 3
anchors_preset = 0
offset_left = 1604.0
offset_top = -8.0
offset_right = 1649.0
offset_bottom = 12.0

[node name="HealthShow" type="Label" parent="UI/Player 2 ui/HealthUI"]
layout_mode = 0
offset_left = 118.0
offset_top = 21.0
offset_right = 172.0
offset_bottom = 47.0
text = "P2  HP:"

[node name="HealthBarUI" type="ProgressBar" parent="UI/Player 2 ui/HealthUI"]
self_modulate = Color(0.0156863, 0.972549, 0.0196078, 1)
layout_mode = 0
offset_left = 19.0
offset_top = 18.0
offset_right = 292.0
offset_bottom = 49.0
value = 100.0
show_percentage = false

[node name="Skills" type="HBoxContainer" parent="UI/Player 2 ui"]
layout_mode = 0
offset_left = 1625.0
offset_top = 45.0
offset_right = 1729.0
offset_bottom = 238.0
scale = Vector2(0.5, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Player 2 ui/Skills"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Player 2 ui/Skills/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "z/x"

[node name="VBoxContainer" parent="UI/Player 2 ui/Skills/VBoxContainer" instance=ExtResource("5_cbscq")]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Player 2 ui/Skills"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Player 2 ui/Skills/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "i
"

[node name="VBoxContainer" parent="UI/Player 2 ui/Skills/VBoxContainer2" instance=ExtResource("6_3yo4v")]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="UI/Player 2 ui/Skills"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Player 2 ui/Skills/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "o"

[node name="VBoxContainer" parent="UI/Player 2 ui/Skills/VBoxContainer3" instance=ExtResource("4_kuwpt")]
layout_mode = 2

[node name="VBoxContainer4" type="VBoxContainer" parent="UI/Player 2 ui/Skills"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Player 2 ui/Skills/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "p"

[node name="VBoxContainer" parent="UI/Player 2 ui/Skills/VBoxContainer4" instance=ExtResource("7_jjixk")]
layout_mode = 2
